# job-agent

./: .gitignore  README.md  pyproject.toml
config/: answers.example.yaml  blocklist.example.yaml  caps.yaml  profile.example.yaml  search.yaml
config/seeds/: eu_uae_boards.yaml
jobagent/: cli.py  config.py  db.py  enrich.py  killswitch.py  llm.py  schema.sql
jobagent/apply/: browser.py  field_mapper.py  filler.py  proof.py  router.py  runner.py  security_code.py
jobagent/dashboard/: __init__.py  app.py  queue.py
jobagent/dashboard/static/: journey.css  journey.js
jobagent/dashboard/templates/: index.html
jobagent/discover/: __init__.py  adzuna.py  ashby.py  base.py  greenhouse.py  hn_hiring.py  jobspy_runner.py  lever.py  remoteok.py  remotive.py  slugs.py  smartrecruiters.py  workable.py
jobagent/inbox/: __init__.py  digest.py  digest_html.py  manual_email.py  watcher.py
jobagent/outreach/: __init__.py  compose.py  contacts.py  gmail.py  send.py
jobagent/score/: __init__.py  judge.py  prefilter.py
jobagent/sponsors/: __init__.py  _common.py  ingest_au.py  ingest_nl.py  ingest_uk.py  ingest_us.py  match.py
jobagent/tailor/: __init__.py  render.py  render_html.py  tailor.py  tailor_v2.py
scripts/: INSTALL.md  apply_now.py  backfill_sde2.py  big_volume.py  com.chinmay.jobagent.dashboard.plist  com.chinmay.jobagent.plist  com.jobagent.dashboard.plist  com.jobagent.plist  discover_new.py  final_sweep.py  fresh_cycle.py  greenhouse_sweep.py  probe_ashby.py  probe_ashby2.py  run_daily.sh  run_volume.sh  setup_gmail_oauth.py  tailor_apply_batch.py
(+2 files in other folders)
