[project]
name = "jobagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.8.0",
    "fastapi>=0.136.3",
    "google-api-python-client>=2.197.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pypdf>=6.13.2",
    "python-jobspy>=1.1.82",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.scripts]
jobagent = "jobagent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jobagent"]
